@@ -26,20 +26,39 @@ This Work includes contributions authored by David E. Jones, not as a
         <error-response url="."/>
     </transition>
     <widgets>
-        <container id="LoginBox">
-            <form-single name="login" transition="login">
-                <field name="userId"><default-field title="Username"><text-line size="20"/></default-field></field>
-                <field name="password"><default-field><password size="20"/></default-field></field>
-                <field name="tenantId"><default-field><text-line size="20"/></default-field></field>
-                <field name="submit"><default-field title="Login"><submit/></default-field></field>
-            </form-single>
-            <!-- TODO add forgot password, etc -->
-        </container>
+        <!-- NOTE: this screen is not under the apps screen, but uses similar header/footer/etc -->
+        <render-mode><text type="html" location="webroot/includes/HtmlHeader.html.ftl"/></render-mode>
 
-        <!-- TODO remove this link when moving away from more of a testing mode, very convenient for now -->
-        <link url="login" text="Login as John Doe">
-            <parameter name="userId" value="john.doe"/>
-            <parameter name="password" value="moqui"/>
-        </link>
+        <container-panel id="apps-container">
+            <panel-header>
+                <container id="header-logo"><label text="Welcome to Moqui" type="h1"/></container>
+            </panel-header>
+            <panel-center>
+                <section-iterate name="headerMessages" list="ec.message.messages" entry="message">
+                    <widgets><container style="message"><label text="${message}"/></container></widgets>
+                </section-iterate>
+                <section-iterate name="headerErrors" list="ec.message.errors" entry="errorMessage">
+                    <widgets><container style="message error"><label text="${errorMessage}"/></container></widgets>
+                </section-iterate>
+
+                <container id="login-box">
+                    <form-single name="login" transition="login">
+                        <field name="userId"><default-field title="Username"><text-line size="20"/></default-field></field>
+                        <field name="password"><default-field><password size="20"/></default-field></field>
+                        <field name="tenantId"><default-field><text-line size="20"/></default-field></field>
+                        <field name="submit"><default-field title="Login"><submit/></default-field></field>
+                    </form-single>
+                    <!-- TODO add forgot password, etc -->
+                </container>
+
+                <!-- TODO remove this link when moving away from more of a testing mode, very convenient for now -->
+                <link url="login" text="Login as John Doe">
+                    <parameter name="userId" value="john.doe"/>
+                    <parameter name="password" value="moqui"/>
+                </link>
+            </panel-center>
+        </container-panel>
+
+        <render-mode><text type="html"><![CDATA[</body></html>]]></text></render-mode>
     </widgets>
 </screen>
