@@ -14,7 +14,7 @@
         xsi:noNamespaceSchemaLocation="http://moqui.org/xsd/xml-screen-1.0.xsd"
         default-menu-title="Tests" default-menu-index="9" require-authentication="false">
     <widgets>
-        <link url="../Login/login" text="Login as John Doe, wrong password test">
+        <link url="../../Login/login" text="Login as John Doe, wrong password test">
             <parameter name="userId" value="john.doe"/>
             <parameter name="password" value="wrong"/>
         </link>
