@@ -15,6 +15,8 @@ This release includes:
   and overriding templates for screen macros, xml-actions, etc
 - View-entity fixes and testing, now most view-entity options work
 - Executable WAR file is more self-contained, ie less required in runtime
+  but with a few more override options in runtime too
+- Root web screen split to support undecorated subscreens and apps
 
 - XML Screens
   - Screen form elements, nearly all implemented
@@ -28,6 +30,8 @@ Notable features not yet implemented:
   - Screen tree elements
   - Screen form *-find elements, file element
   - Screen form AJAX and jQuery
+  - Screen form validation based on target transition service definition
+    with the define once, run on client and server concept
 - Entity Facade
   - Entity ECA rules
   - Entity encryption, audit-logging, complex aliases in views
@@ -38,7 +42,7 @@ Notable features not yet implemented:
   - Database-driven dynamic view entity
 - Service Facade
   - Service ECA rules
-  - Service validation (Antisamy HTML checks), authentication, semaphores
+  - Service validation, Antisamy HTML checks, authentication, semaphores
   - Service runners for remote service calls (HTTP, JMS, RMI proxies)
   - Service runners for web service standards (XML-RPC, REST, JSON, etc)
   - Expand auto-parameters
